# ModernCppStarter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
project/private/: TemplatePrivate.h
project/src/: Template.cpp
